src/App.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
*, *:before, *:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
  }
@font-face {
  font-family: 'Poppins-thin';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Thin.ttf);
}
@font-face {
  font-family: 'Poppins-extra-light';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-ExtraLight.ttf);
}
@font-face {
  font-family: 'Poppins-regular';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Regular.ttf);
}
@font-face {
  font-family: 'Poppins-light';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Light.ttf);
}
@font-face {
  font-family: 'Poppins-medium';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Medium.ttf);
}
@font-face {
  font-family: 'Poppins-bold';
  src: local('Poppins'), url(./components/assets/fonts/Poppins/Poppins-Bold.ttf);
}
@font-face {
  font-family: 'Roboto';
  src: local('Roboto'), url(./components/assets/fonts/Poppins/Roboto-Regular.ttf);
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
body {
	line-height: 1;
  font-family: Poppins, sans-serif;
  font-weight: 400;
  background: #dedede;
}
.home, .about, .contact {
  min-height: 100vh;
}
.contact {
  margin-top: 50px;
}
.work {
  position: relative;
  overflow: hidden;
}
#navbar {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 250px;
  position: fixed;
  top: 0;
  right: -250px;
  z-index: 99;
  background-color: #f5f5f5;
}
#navbar li {
  font-size: 3rem;
  margin: 50px 0;
  cursor: pointer;
}
.prof-pic {
  width: 250px;
  height: 250px;
  border: 7px solid black;
  border-radius: 50%;
  background: white;
}
.title-box {
  text-align: right;
  font-size: 2rem;
  font-weight: 600;
  position: relative;
  width: 30rem;
  height: 7rem;
}
.title-bar-box {
  height: 7rem;
}
.title-bar {
  width: 7px;
  background-color: black;
  animation-name: grow;
  animation-duration: 2s;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
}
.title-box > h1:first-child {
  position: absolute;
  top: -100rem;
  right: 10px;
  animation-name: slideText1;
  animation-duration: 0.67s;
  animation-fill-mode: forwards;
}
.title-box > h1:nth-child(2) {
  position: absolute;
  top: -100rem;
  right: 10px;
  animation-name: slideText2;
  animation-duration: 0.67s;
  animation-delay: 0.67s;
  animation-fill-mode: forwards;
}
.title-box > h1:nth-child(3) {
  position: absolute;
  top: -100rem;
  right: 10px;
  animation-name: slideText3;
  animation-duration: 0.67s;
  animation-delay: 1.33s;
  animation-fill-mode: forwards;
}
.home-title {
  display: flex;
  justify-content: center;
  align-items: center;
}
.burger {
  position: fixed;
  top: 25px;
  right: 25px;
  color: black;
  animation-duration: 0.s;
  cursor: pointer;
  z-index: 4;
  background-color: #dedede;
  transition: background-color 0.5s
}
#nav-dot {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: black;
  position: absolute;
  top: 70px;
  left: -20px;
  transition: top 0.2s;
}
.section-title {
  font-size: 3rem;
  font-weight: 600;
  max-height: 3.5rem;
}
.cat {
  display: flex;
  flex-direction: column;
}
.cat-title {
  font-size: 1.7rem;
  font-weight: 600;
  margin: 25px 0;
}
.project-box {
  margin-left: 75px;
  cursor: pointer;
}
.project-title {
  font-size: 1.5rem;
  margin-bottom: 7px;
  box-shadow: 0;
}
.project-title:hover {
  text-decoration: underline;
}
.project-thumb {
  height: 90px;
  width: 160px;
  margin-right: 20px;
  transition: box-shadow 2s;
}
.project-thumb:hover {
  box-shadow: 0 0 5px 5px gray;
}
.computer {
  height: 600px;
  position: absolute;
  top: 0;
}
.mock-box {
  position: relative;
  height: 370px;
  width: 450px;
  margin-right: 100px;
}
.big-thumb {
  height: 370px;
}
.phone-mock {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 170px;
}
.project-links {
  font-size: 0.8rem;
  color: black;
}
.project-links:hover {
  text-decoration: underline;
  color: black;
}
.preview-container {
  position: fixed;
  height: calc(100vh - 20px);
  top: 10px;
  z-index: 5;
  overflow-y: hidden;
}
.preview-box {
  background-color: #f4f0f0;
  position: relative;
  margin: 0 75px;
  height: 100%;
  border: 3px solid black;
  padding: 25px;
  border-radius: 30px;
  justify-content: center;
}
.preview-title {
  font-size: 2rem;
}
#close-btn {
  position: absolute;
  right: 15px;
  width: 25px;
  height: 25px;
  top: 15px;
  /* background-color: #dedede; */
  font-size: 1.2rem;
  box-shadow: none;
  border: 2px solid black;
  border-radius: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.project-desc {
  max-width: 400px;
  font-family: Roboto, sans-serif;
  line-height: 1.3rem;
}
.lang-logo {
  height: 50px;
}
#pencilruler {
  height: 50px;
  color: blue;
}
.line-work {
  width: 0;
  height: 2px;
  margin-top: 5px;
  background: black;
  transition: width 1s;
}
.line-about {
  width: 0;
  height: 2px;
  margin-top: 5px;
  background: black;
  transition: width 1s;
}
.line-contact {
  width: 0;
  height: 2px;
  margin-top: 5px;
  background: black;
  transition: width 1s;
}
.about-pic {
  height: 500px;
  width: 300px;
  border: 1px solid black;
}
.about p {
  font-size: 1.1rem;
  line-height: 1.4rem;
  font-family: Roboto, sans-serif;
}
.contact-info-container {
  height: 350px;
}
.touch {
  margin-left: 80px;
  margin-right: -80px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  font-size: 3rem;
}
.bar {
  height: 0;
  width: 7px;
  background: black;
  transition: height 1.8s 0.5s
}
.contact-info-box {
  display: flex;
  flex-direction: column;
  align-self: flex-end;
  margin-left: -80px;
  font-size: 1.5rem;
  overflow: hidden;
  padding: 3px;
  min-width: 150px;
}
.contact-info-box a {
  display: flex;
  flex-direction: column;
  color: black;
}
.contact-info-box a:hover {
  text-decoration: none;
}
.touch > h1:nth-child(1) {
  margin-right: 1000px;
  transition: margin-right 0.5s 0.5s;
}
.touch > h1:nth-child(2) {
  margin-right: 1000px;
  transition: margin-right 0.5s 0.7s;
}
.touch > h1:nth-child(3) {
  margin-right: 1000px;
  transition: margin-right 0.5s 0.9s;
}
.touch > h1:nth-child(4) {
  margin-right: 1000px;
  transition: margin-right 0.5s 1.1s;
}
.phone:nth-child(1) {
  margin-left: 1000px;
  transition: margin-left 0.5s 1.3s;
}
.phone:nth-child(2) {
  margin-left: 1000px;
  transition: margin-left 0.5s 1.4s;
}
.phone:nth-child(3) {
  margin-left: 1000px;
  transition: margin-left 0.5s 1.5s;
}
.email:nth-child(1) {
  margin-left: 1000px;
  transition: margin-left 0.4s 1.6s;
}
.email:nth-child(2) {
  margin-left: 1000px;
  transition: margin-left 0.4s 1.7s;
}
.email:nth-child(3) {
  margin-left: 1000px;
  transition: margin-left 0.4s 1.8s;
}
.bio-heading {
  font-family: Poppins, sans-serif;
  font-size: 1.2rem;
  font-weight: 600;
}
.preview-box .project-links {
  color: hsl(0, 0%, 36%);
  text-decoration: underline;
}
@keyframes slideIn {
  from {right: -250px;
    box-shadow: 0;}
    to {right: 0px;
      box-shadow: -5px 0 10px black;}
}
@keyframes slideOut {
  from {right: 0px;
        box-shadow: -5px 0 10px black;}
  to {right: -250px;
      box-shadow: 0}
}
@keyframes slideText1 {
  from {
    top: -100rem;
  } to {
    top: 0rem;
  }
}
@keyframes slideText2 {
  from {
    top: -100rem;
  } to {
    top: 2.3rem;
  }
}
@keyframes slideText3 {
  from {
    top: -100rem;
  } to {
    top: 4.7rem;
  }
}
@keyframes grow {
  from {
    min-height: 0;
  } to {
    min-height: 7rem;
  }
}
@media only screen and (max-width: 992px) {
  .preview-box {
    padding: 75px 10px 10px 10px;
    margin: 0 10px;
    flex-direction: column;
  }
  .project-box {
    margin-left: 0px
  }
  .preview-content {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .mock-box {
    max-height: 260px;
    width: 100%;
    max-width: 280px;
    margin-right: 0;
    margin-bottom: 15px;
    display: flex;
    justify-content: center;
  }
  #chess-preview {
    height: calc(100vh - 88px);
  }
  #chess-preview .project-desc {
    font-size: 0.9rem;
  }
  .big-thumb {
    max-height: 260px;
  }
  .phone-mock {
    height: 120px;
  }
}
@media only screen and (max-width: 600px) {
  .title-box {
    font-size: 1.5rem;
  }
  .section-title {
    font-size: 1.5rem
  }
  .project-title {
    font-size: 1.2rem;
    margin-bottom: 7px;
    align-self: center;
  }
  .project-thumb {
    height: 60px;
    width: 90px;
    margin-right: 10px;
  }
  .project-links {
    font-size: 0.8rem;
    color: black;
  }
  .contact-info-box {
    margin-left: -25px;
    font-size: 1.5rem;
  }
  .touch {
    margin-right: -25px;
    margin-left: 0;
    font-size: 2.5rem;
  }
  .contact-info-container > div {
    height: 315px;
  }
  .home-title {
    align-items: flex-start;
  }
  .cat-title {
    font-size: 1.5rem;
  }
  .big-thumb {
    max-height: 220px;
  }
  .mock-box {
    max-height: 220px;
  }
}

